--- a/src/templates/_grants/edit.twig
+++ b/src/templates/_grants/edit.twig
@@ -4,6 +4,11 @@
 
 {% import "_includes/forms" as forms %}
 
+{% set crumbs = [
+    { label: 'Membership' | t('membership'), url: url('membership') },
+    { label: 'Grants' | t('membership'), url: url('membership/grants') }
+] %}
+
 {% block content %}
     <form method="POST">
         {{ csrfInput() }}
